Fix top spacing for those who have added space above container (eg. fixed navbar)

--- a/src/dev.less
+++ b/src/dev.less
@@ -1,6 +1,8 @@
 .container {
 	&.developer {
 		z-index: 999999;
+		margin-top: 0;
+		padding-top: 0;
 		button {
 			&.toggle {
 				position: fixed;
